# playwright-tutorial

./: main.py  pyproject.toml
code/: pytest.ini  test_asyncapproach.py  test_bootstrap_hiddendd.py  test_browsercontext.py  test_builtinlocators.py  test_csslocators.py  test_datadriven.py  test_datadriven_csv.py  test_datadriven_excel.py  test_dialoguesandframes.py  test_dropdowns.py  test_dynamic_tables.py  test_dynamic_xpath.py  test_externalfiles_json.py  test_fileuploaddownload.py  test_frames.py  test_handlescreeshotvideostraceviwerflake.py  test_input.py  test_jquery_datepickers.py  test_keyboardactions.py  test_mouseactions.py  test_playwright.py  test_pw_methods.py  test_sample_configurationfile.py  test_statichtml.py  test_xpathlocators.py
code/code/Download/: testfile.txt
code/test-results/test-datadriven-excel-py-test-login-datadriven-chromium-invalid/: video.webm
code/test-results/test-datadriven-excel-py-test-login-datadriven-chromium-invaliduser-example-com-test321-invalid/: video.webm
code/test-results/test-datadriven-excel-py-test-login-datadriven-chromium-laura-taylor1234-example-com-test123-valid/: video.webm
code/test-results/test-datadriven-excel-py-test-login-datadriven-chromium-validuser-example-com-test222-invalid/: video.webm
